Added support for screen readers.
Refactored the setting system to make it thread-safe.
Planned out the task system.
Fixed the closed topic status header.

--- a/templates/account-menu.html
+++ b/templates/account-menu.html
@@ -1,15 +1,15 @@
-<div class="colstack_left">
+<nav class="colstack_left">
 	<div class="colstack_item colstack_head rowhead">
 		<div class="rowitem"><a>My Account</a></div>
 	</div>
 	<div class="colstack_item rowmenu">
-		<div class="rowitem passive"><a href="/user/edit/avatar/">Change Avatar</a></div>
-		<div class="rowitem passive"><a href="/user/edit/username/">Change Username</a></div>
-		<div class="rowitem passive"><a href="/user/edit/critical/">Change Password</a></div>
-		<div class="rowitem passive"><a href="/user/edit/email/">Change Email</a></div>
-		<div class="rowitem passive"><a href="/user/notifications">Notifications</a></div>
+		<div class="rowitem passive"><a href="/user/edit/avatar/">Avatar</a></div>
+		<div class="rowitem passive"><a href="/user/edit/username/">Username</a></div>
+		<div class="rowitem passive"><a href="/user/edit/critical/">Password</a></div>
+		<div class="rowitem passive"><a href="/user/edit/email/">Email</a></div>
+		<div class="rowitem passive"><a href="/user/edit/notifications">Notifications</a></div>
 		{{/** TO-DO: Add an alerts page with pagination to go through alerts which either don't fit in the alerts drop-down or which have already been dismissed. Bear in mind though that dismissed alerts older than two weeks might be purged to save space and to speed up the database **/}}
 		<div class="rowitem passive"><a>Coming Soon</a></div>
 		<div class="rowitem passive"><a>Coming Soon</a></div>
 	</div>
-</div>
+</nav>
