--- a/templates/account-own-edit-email.html
+++ b/templates/account-own-edit-email.html
@@ -1,6 +1,6 @@
 {{template "header.html" . }}
 {{template "account-menu.html" . }}
-<div class="colstack_right">
+<main class="colstack_right">
 	<div class="colstack_item colstack_head rowhead">
 		<div class="rowitem"><a>Emails</a></div>
 	</div>
@@ -16,5 +16,5 @@
 		</div>
 		{{end}}
 	</div>
-</div>
+</main>
 {{template "footer.html" . }}
