--- a/templates/account-own-edit.html
+++ b/templates/account-own-edit.html
@@ -1,6 +1,6 @@
 {{template "header.html" . }}
 {{template "account-menu.html" . }}
-<div class="colstack_right">
+<main class="colstack_right">
 	<div class="colstack_item colstack_head rowhead">
 		<div class="rowitem"><a>Edit Password</a></div>
 	</div>
@@ -23,5 +23,5 @@
 			</div>
 		</form>
 	</div>
-</div>
+</main>
 {{template "footer.html" . }}
