--- a/templates/custom_page.html
+++ b/templates/custom_page.html
@@ -1,6 +1,8 @@
 {{template "header.html" . }}
-<div class="rowblock">
-	<div class="rowitem">{{.Title}}</div>
-</div>
-<div class="rowblock">{{.Something}}</div>
+<main>
+	<div class="rowblock">
+		<div class="rowitem">{{.Title}}</div>
+	</div>
+	<div class="rowblock">{{.Something}}</div>
+</main>
 {{template "footer.html" . }}
