--- a/templates/error.html
+++ b/templates/error.html
@@ -1,8 +1,10 @@
 {{template "header.html" . }}
-<div class="rowblock rowhead">
-	<div class="rowitem"><a>An error has occured</a></div>
-</div>
-<div class="rowblock">
-	<div class="rowitem passive">{{.Something}}</div>
-</div>
+<main>
+	<div class="rowblock rowhead">
+		<div class="rowitem"><a>An error has occured</a></div>
+	</div>
+	<div class="rowblock">
+		<div class="rowitem passive">{{.Something}}</div>
+	</div>
+</main>
 {{template "footer.html" . }}
