--- a/templates/forums.html
+++ b/templates/forums.html
@@ -1,4 +1,6 @@
 {{template "header.html" . }}
+<main>
+
 <div class="rowblock opthead">
 	<div class="rowitem"><a>Forums</a></div>
 </div>
@@ -20,4 +22,6 @@
 	</div>
 	{{else}}<div class="rowitem passive">You don't have access to any forums.</div>{{end}}
 </div>
+
+</main>
 {{template "footer.html" . }}
