--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,4 +1,4 @@
-<div class="nav">
+<nav class="nav">
 	<div class="move_left">
 	<div class="move_right">
 	<ul>
@@ -25,4 +25,4 @@
 	</div>
 	</div>
 	<div style="clear: both;"></div>
-</div>
+</nav>
