--- a/templates/panel-forums.html
+++ b/templates/panel-forums.html
@@ -5,7 +5,7 @@
 	'forum_preset': ['all','announce','members','staff','admins','archive','custom']};
 </script>
 
-<div class="colstack_right">
+<main class="colstack_right">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a>Forums</a></div>
 	</div>
@@ -70,6 +70,6 @@
 			</div>
 		</form>
 	</div>
-</div>
+</main>
 
 {{template "footer.html" . }}
