--- a/templates/panel-menu.html
+++ b/templates/panel-menu.html
@@ -1,1 +1,1 @@
-<div class="colstack_left">{{template "panel-inner-menu.html" . }}</div>
+<nav class="colstack_left">{{template "panel-inner-menu.html" . }}</nav>
