--- a/templates/panel-user-edit.html
+++ b/templates/panel-user-edit.html
@@ -1,6 +1,6 @@
 {{template "header.html" . }}
 {{template "panel-menu.html" . }}
-<div class="colstack_right">
+<main class="colstack_right">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a>User Editor</a></div>
 	</div>
@@ -32,5 +32,5 @@
 		</div>
 		</form>
 	</div>
-</div>
+</main>
 {{template "footer.html" . }}
