--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,6 @@
 {{template "header.html" . }}
+<main>
+
 <div class="rowblock rowhead">
 	<div class="rowitem"><a>Create Account</a></div>
 </div>
@@ -25,4 +27,6 @@
 		</div>
 	</form>
 </div>
+
+</main>
 {{template "footer.html" . }}
