--- a/templates/socialgroups_create_group.html
+++ b/templates/socialgroups_create_group.html
@@ -1,4 +1,6 @@
 {{template "header.html" . }}
+<main>
+
 <div class="rowblock rowhead">
 	<div class="rowitem"><a>Create Group</a></div>
 </div>
@@ -27,4 +29,6 @@
 		</div>
 	</form>
 </div>
+
+</main>
 {{template "footer.html" . }}
