--- a/templates/panel-debug.html
+++ b/templates/panel-debug.html
@@ -1,6 +1,6 @@
 {{template "header.html" . }}
 {{template "panel-menu.html" . }}
-<div id="panel_dashboard_right" class="colstack_right">
+<main id="panel_dashboard_right" class="colstack_right">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a>Debug</a></div>
 	</div>
@@ -13,5 +13,5 @@
 		<div class="grid_item grid_stat">{{.OpenConns}}</div>
 		<div class="grid_item grid_stat">{{.DBAdapter}}</div>
 	</div>
-</div>
+</main>
 {{template "footer.html" . }}
