--- a/templates/panel-forum-edit.html
+++ b/templates/panel-forum-edit.html
@@ -4,7 +4,7 @@
 var form_vars = {'perm_preset': ['can_moderate','can_post','read_only','no_access','default','custom']};
 </script>
 
-<div class="colstack_right">
+<main class="colstack_right">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a>{{.Name}} Forum</a></div>
 	</div>
@@ -14,17 +14,17 @@ var form_vars = {'perm_preset': ['can_moderate','can_post','read_only','no_acces
 			<div class="formitem formlabel"><a>Name</a></div>
 			<div class="formitem"><input name="forum_name" type="text" value="{{.Name}}" placeholder="General Forum" /></div>
 		</div>
-    <div class="formrow">
+		<div class="formrow">
 			<div class="formitem formlabel"><a>Description</a></div>
 			<div class="formitem"><input name="forum_desc" type="text" value="{{.Desc}}" placeholder="Where the general stuff happens" /></div>
 		</div>
-    <div class="formrow">
-      <div class="formitem formlabel"><a>Hidden?</a></div>
-      <div class="formitem"><select name="forum_active">
-        <option{{if not .Active}} selected{{end}} value="1">Yes</option>
-        <option{{if .Active}} selected{{end}} value="0">No</option>
-      </select></div>
-    </div>
+		<div class="formrow">
+			<div class="formitem formlabel"><a>Hidden?</a></div>
+			<div class="formitem"><select name="forum_active">
+				<option{{if not .Active}} selected{{end}} value="1">Yes</option>
+				<option{{if .Active}} selected{{end}} value="0">No</option>
+			</select></div>
+		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>Preset</a></div>
 			<div class="formitem">
@@ -36,7 +36,7 @@ var form_vars = {'perm_preset': ['can_moderate','can_post','read_only','no_acces
 					<option{{if eq .Preset "admins"}} selected{{end}} value="admins">Admin Only</option>
 					<option{{if eq .Preset "archive"}} selected{{end}} value="archive">Archive</option>
 					<option{{if eq .Preset "custom"}} selected{{end}} value="custom">Custom</option>
-			   </select>
+				</select>
 			</div>
 		</div>
 		<div class="formrow">
@@ -62,5 +62,5 @@ var form_vars = {'perm_preset': ['can_moderate','can_post','read_only','no_acces
 		</div>
 		{{end}}
 	</div>
-</div>
+</main>
 {{template "footer.html" . }}
