--- a/templates/panel-group-edit-perms.html
+++ b/templates/panel-group-edit-perms.html
@@ -1,5 +1,5 @@
 {{template "header.html" . }}
-<div class="colstack_left">
+<nav class="colstack_left">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a href="/panel/groups/edit/{{.ID}}">Group Editor</a></div>
 	</div>
@@ -9,8 +9,8 @@
 		<div class="rowitem passive"><a href="/panel/groups/edit/perms/{{.ID}}">Permissions</a></div>
 	</div>
 {{template "panel-inner-menu.html" . }}
-</div>
-<div class="colstack_right">
+</nav>
+<main class="colstack_right">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a>{{.Name}} Group</a></div>
 	</div>
@@ -59,5 +59,5 @@
 		</div>
 	</div>
 	</form>
-</div>
+</main>
 {{template "footer.html" . }}
