--- a/templates/panel-groups.html
+++ b/templates/panel-groups.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
 {{template "panel-menu.html" . }}
 
-<div class="colstack_right">
+<main class="colstack_right">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a>Groups</a></div>
 	</div>
@@ -56,5 +56,5 @@
 			</div>
 		</form>
 	</div>
-</div>
+</main>
 {{template "footer.html" . }}
