--- a/templates/panel-plugins.html
+++ b/templates/panel-plugins.html
@@ -1,6 +1,6 @@
 {{template "header.html" . }}
 {{template "panel-menu.html" . }}
-<div class="colstack_right">
+<main class="colstack_right">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a>Plugins</a></div>
 	</div>
@@ -20,5 +20,5 @@
 		</div>
 		{{end}}
 	</div>
-</div>
+</main>
 {{template "footer.html" . }}
