--- a/templates/widget_menu.html
+++ b/templates/widget_menu.html
@@ -1,6 +1,6 @@
 <div class="rowblock rowhead">
 	<div class="rowitem">{{.Name}}</div>
 </div>
-<div class="rowblock">{{range .MenuList}}
+<nav class="rowblock">{{range .MenuList}}
 	<div class="rowitem  {{if .Compact}}datarow{{end}}"><a href="{{.Location}}">{{.Text}}</a></div>
-{{end}}</div>
+{{end}}</nav>
