Fixed a crash bug caused by the previous commit. Renamed a few templates. Added the required attribute to a few form inputs.

--- a/templates/account-own-edit-avatar.html
+++ b/templates/account-own-edit-avatar.html
@@ -13,7 +13,7 @@
 		<form action="/user/edit/avatar/submit/" method="post" enctype="multipart/form-data">
 			<div class="formrow real_first_child">
 				<div class="formitem formlabel"><a>Upload Avatar</a></div>
-				<div class="formitem"><input name="account-avatar" type="file" /></div>
+				<div class="formitem"><input name="account-avatar" type="file" required /></div>
 			</div>
 			<div class="formrow">
 				<div class="formitem"><button name="account-button" class="formbutton">Update</button></div>
