--- a/templates/account-own-edit-username.html
+++ b/templates/account-own-edit-username.html
@@ -12,7 +12,7 @@
 			</div>
 			<div class="formrow">
 				<div class="formitem formlabel"><a>New Username</a></div>
-				<div class="formitem"><input name="account-new-username" type="text" /></div>
+				<div class="formitem"><input name="account-new-username" type="text" required /></div>
 			</div>
 			<div class="formrow">
 				<div class="formitem"><button name="account-button" class="formbutton form_middle_button">Update</button></div>
