--- a/templates/account-own-edit.html
+++ b/templates/account-own-edit.html
@@ -8,15 +8,15 @@
 		<form action="/user/edit/critical/submit/" method="post">
 			<div class="formrow real_first_child">
 				<div class="formitem formlabel"><a>Current Password</a></div>
-				<div class="formitem"><input name="account-current-password" type="password" placeholder="*****" /></div>
+				<div class="formitem"><input name="account-current-password" type="password" placeholder="*****" required /></div>
 			</div>
 			<div class="formrow">
 				<div class="formitem formlabel"><a>New Password</a></div>
-				<div class="formitem"><input name="account-new-password" type="password" placeholder="*****" /></div>
+				<div class="formitem"><input name="account-new-password" type="password" placeholder="*****" required /></div>
 			</div>
 			<div class="formrow">
 				<div class="formitem formlabel"><a>Confirm Password</a></div>
-				<div class="formitem"><input name="account-confirm-password" type="password" placeholder="*****" /></div>
+				<div class="formitem"><input name="account-confirm-password" type="password" placeholder="*****" required /></div>
 			</div>
 			<div class="formrow">
 				<div class="formitem"><button name="account-button" class="formbutton form_middle_button">Update</button></div>
