--- a/templates/create-topic.html
+++ b/templates/create-topic.html
@@ -13,11 +13,11 @@
 			</div>
 			<div class="formrow">
 				<div class="formitem formlabel"><a>Topic Name</a></div>
-				<div class="formitem"><input name="topic-name" type="text" placeholder="Topic Name" /></div>
+				<div class="formitem"><input name="topic-name" type="text" placeholder="Topic Name" required /></div>
 			</div>
 			<div class="formrow">
 				<div class="formitem formlabel"><a>Content</a></div>
-				<div class="formitem"><textarea class="large" name="topic-content" placeholder="Insert content here"></textarea></div>
+				<div class="formitem"><textarea class="large" name="topic-content" placeholder="Insert content here" required></textarea></div>
 			</div>
 			<div class="formrow">
 				<div class="formitem"><button name="topic-button" class="formbutton form_middle_button">Create Topic</button></div>
