--- a/templates/login.html
+++ b/templates/login.html
@@ -6,11 +6,11 @@
 	<form action="/accounts/login/submit/" method="post">
 		<div class="formrow">
 			<div class="formitem formlabel"><a>Account Name</a></div>
-			<div class="formitem"><input name="username" type="text" placeholder="Account Name" /></div>
+			<div class="formitem"><input name="username" type="text" placeholder="Account Name" required /></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem formlabel"><a>Password</a></div>
-			<div class="formitem"><input name="password" type="password" autocomplete="current-password" placeholder="*****" /></div>
+			<div class="formitem"><input name="password" type="password" autocomplete="current-password" placeholder="*****" required /></div>
 		</div>
 		<div class="formrow">
 			<div class="formitem"><button name="login-button" class="formbutton">Login</div>
